# rust-blog-post

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md
cpp/: Makefile  MyCppClass.cpp  MyCppClass.h  MyCppInterface.h  MyForeignInterface.h  MyStruct.h  main.cpp
cppcwrapper/: Makefile  RustStructWrapper.cpp  RustStructWrapper.h
rustcwrapper/: Cargo.toml
rustcwrapper/include/: rust_c_wrapper.h
rustcwrapper/src/: lib.rs
rustcwrapper/src/wrapper/: myrustlib.rs  plugin_wrapper.rs
rustplugin/: Cargo.toml
rustplugin/src/: lib.rs
rustplugin/src/myrustlib/: my_foreign_interface.rs  my_rust_struct.rs
