[package]
name = "rustcwrapper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustplugin = { path = "../rustplugin/", version = "0.1.0" }
libc = "0.2"

# Configure the output library to be a static lib (.a file) that the C++ app can link against.
[lib]
name = "rustcwrapper"
crate-type = ["staticlib"]
